--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/thanujaDev26/GeoLocator/issues"
   },
-  "homepage": "https://github.com/thanujaDev26/GeoLocator#readme"
+  "homepage": "https://github.com/thanujaDev26/GeoLocator#readme",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.8.4",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.5",
+    "nodemon": "^3.1.7"
+  }
 }
